clustera/07_app2-gateay-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app2-route
  namespace: app2
spec:
  parentRefs:
  - name: anycast-shared-gateway
    namespace: anycast-shared-gateway
  hostnames:
  - apps.anycast.goguybrush.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /app2
    backendRefs:
    - name: app2
      port: 8080
